--- a/17-html-css-basics-2-exercise/index.html
+++ b/17-html-css-basics-2-exercise/index.html
@@ -1,24 +1,48 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon.png">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>Coders In Hoods || Mini Project || Landing page</title>
 </head>
+
 <body>
     <!-- Remove this section -->
-    <div class="content_area">
-        <div class="content_area__logo">
-            <a href="https://www.youtube.com/c/codersinhoods">
-                <img src="./images/logo.jpg" alt="CodersInHood Logo">
-            </a>
+    <nav>
+        <ul>
+            <li><a href "">home</a></li>
+            <li><a href="">html5/css3</a></li>
+            <li><a href="">help</a></li>
+            <li><a href="">about us</a></li>
+            <li><a href="">contact us</a></li>
+        </ul>
+    </nav>
+    <Div class="header">
+        <img src=".\images\wave-1817646_1920.png" class="overlay" alt="flow image">
+        <Div class="titles">
+            <h3>Learn how to code HTML and CSS</h3>
+            <h1>Coding - HTML and CSS</h1>
+        </Div>
+    </Div>
+    <div class="main1">
+        <div class="main1img">
+            <img src=".\images\codes-coding-css-1921326.jpg" alt="codeback">
+            <div class="htmlcenter">
+                <h1>html</h1>
+            </div>
+        </div>
+
+        <div class="main1txt">
+
         </div>
     </div>
     <!-- =================== -->
 </body>
+
 </html>
