just footer left

--- a/17-html-css-basics-2-exercise/index.html
+++ b/17-html-css-basics-2-exercise/index.html
@@ -34,14 +34,52 @@
         <div class="main1img">
             <img src=".\images\codes-coding-css-1921326.jpg" alt="codeback">
             <div class="htmlcenter">
-                <h1>html</h1>
+                <h1>HTML</h1>
             </div>
         </div>
+        <div class="main1text">
+            <h1>Why Learn HTML?</h1>
+            <p>HTML is the foundation of all webpages without HTML, you wouldn't be able to organize text or add images or videos to you web pages.<br><br> HTML is the beginning of all you need to know to create engaging web pages!
 
-        <div class="main1txt">
-
+            </p>
         </div>
     </div>
+    <div class="container2">
+        <div class="row2text">
+            <h1>why learn CSS?</h1>
+            <p>Without CSS, every web page wold be drab plain text and images that flowed straight down the page.<br>With CSS, you can add color and background images and chagenthe layour of your page - your web pages can feel like works of art!</p>
+        </div>
+        <div class="row2img">
+            <img src=".\images\codes-coding-css-1921326.jpg" alt="codeback">
+            <h1>CSS3</h1>
+        </div>
+    </div>
+    <div class="container3">
+        <div class="container3background">
+            <div class="cont3title">
+                <h1>The Easiest Way to Learn HTML5</h1>
+                <h4>you will learn many aspects of styling web pages!</h4>
+            </div>
+            <div class="container3cards">
+                <div class="card1">
+                    <img src=".\images\adult-code-coding-1181359.jpg" alt="laptop1">
+                    <h1>Introduction to HTML</h1>
+                    <p>in this course, you will learn how to style individual.</p>
+                </div>
+                <div class="card1">
+                    <img src=".\images\code-3637299_1920.jpg" alt="code">
+                    <h1>HTML tags</h1>
+                    <p>In this course, you will learn how to style individual.</p>
+                </div>
+                <div class="card1">
+                    <img src=".\images\access-code-connection-1181467.jpg" alt="laptop2">
+                    <h1>HTML fields</h1>
+                    <p>In this course, you will learn how to style individual.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- =================== -->
 </body>
 
