--- a/17-html-css-basics-2-exercise/index.html
+++ b/17-html-css-basics-2-exercise/index.html
@@ -80,7 +80,54 @@
         </div>
     </div>
 
+
     <!-- =================== -->
 </body>
+<div class="container4">
+    <div class="cont4titles">
+        <h1>Coding - HTML and CSS</h1>
+        <h3>You will learn many aspects of styling web pages!</h3>
+    </div>
+    <div>
+        <div class="dogimages">
+            <div class="leftimage">
+                <img src=".\images\minion-2201004_1920.jpg" alt="minion">
+            </div>
+            <div class="rightimages">
+                <div class="row1">
+                    <div class="doge"><img src=".\images\dog-2583924_1920.jpg" alt="doge">
+                        <h1>Doge</h1>
+                    </div>
+                    <img src=".\images\adorable-animal-bed-374898.jpg" alt="friendpuppy">
+                </div>
+                <div class="row2">
+                    <img src=".\images\adorable-animal-cat-2194261.jpg" alt="cute cat">
+                    <img src=".\images\bulldog-close-up-coffee-688961.jpg" alt="bulldog">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="social">
+        <h2><a href="">contact us</a></h2>
+        <div class="socialbuttons">
+            <ul>
+                <li>
+                    <a href=""><img src=".\images\facebook-logo-in-circular-button-outlined-social-symbol.png" alt="facebook"></a>
+                </li>
+                <li>
+                    <a href=""><img src=".\images\google-plus-circular-button.png" alt="google"></a>
+                </li>
+                <li>
+                    <a href=""><img src=".\images\twitter-circular-button.png" alt="twitter"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <p class="footerText">
+        What if a storm hit Hilton head island before you got ready to go on a vacation? stay home!<br><br> People are wanting to fly to international destinations for cacations but planning holodays for corona!
+    </p>
+</div>
 
 </html>
