--- a/39-DOM-updating-elements/index.html
+++ b/39-DOM-updating-elements/index.html
@@ -19,7 +19,9 @@
 
 <body>
     <h1></h1>
-    <div></div>
+    <div>
+        <span>div</span>
+    </div>
     <img src="" alt="" />
     <a href="http://googe.com">Go to Google</a>
     <div class="btns">
