--- a/17-html-css-basics-2-exercise/index.html
+++ b/17-html-css-basics-2-exercise/index.html
@@ -14,7 +14,7 @@
     <!-- Remove this section -->
     <div class="content_area">
         <div class="content_area__logo">
-            <a href="https://www.youtube.com/c/codersinhoods">
+            <a href="https://www.youtube.com/c/codersinhoodsschool">
                 <img src="./images/logo.jpg" alt="CodersInHood Logo">
             </a>
         </div>
